[package]
name = "lruc"
version = "0.1.0"
authors = ["heyyou <hey3you3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.6"
http = "0.2.1"
tokio = { version = "0.2", features = ["macros"] }
clap = "3.0.0-beta.1"
dirs = "2"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
